Manifests/budget-app-web.yaml
# budget-app-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget-app-web
  template:
    metadata:
      labels:
        app: budget-app-web
    spec:
      containers:
        - name: budget-app-web
          image: jarvis99/new-budget-app_web:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: budget-app-web-service
spec:
  selector:
    app: budget-app-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
  type: NodePort
